Rename ABFS tests as ABFS access key tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,7 @@ jobs:
           if [ "${AWS_ACCESS_KEY_ID}" != "" ]; then
             ./mvnw test -B -Dair.check.skip-all -pl presto-hive -P test-hive-glue
           fi
-      - name: Run Hive Azure ABFS Tests
+      - name: Run Hive Azure ABFS Access Key Tests
         if: matrix.config != 'config-empty' # Hive 1.x does not support Azure storage
         env:
           ABFS_CONTAINER: ${{ secrets.AZURE_ABFS_CONTAINER }}
@@ -135,7 +135,7 @@ jobs:
         run: |
           if [ "${ABFS_CONTAINER}" != "" ]; then
             source presto-product-tests/conf/product-tests-${{ matrix.config }}.sh &&
-              presto-hive-hadoop2/bin/run_hive_abfs_tests.sh
+              presto-hive-hadoop2/bin/run_hive_abfs_access_key_tests.sh
           fi
       - name: Run Hive Azure WASB Tests
         if: matrix.config != 'config-empty' # Hive 1.x does not support Azure storage
