--- a/presto-client/pom.xml
+++ b/presto-client/pom.xml
@@ -75,10 +75,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--  TODO: Kindly suggest if another library is preferred. -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.2.4</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
